grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: grafana-ingress
spec:
  rules:
    - host: nagato.home
      http:
        paths:
          - backend:
              service:
                name: http-grafana
                port:
                  number: 3000
            path: /grafana
            pathType: Prefix
